edited css and html files

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Anime Search App</title>
+  <title>ZoroSearch</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+    body {
+      background-image: url(img.jpg);
+      background-size: cover;
+      
+    }
+  </style>
 </head>
 <body>
-  <h1>Anime Search App</h1>
+  <h1>ZoroSearch</h1>
   <input type="text" id="search-input" placeholder="Enter anime name">
   <button id="search-button">Search</button>
 
